--- a/src/pubsub/workers/templates/status_page.html
+++ b/src/pubsub/workers/templates/status_page.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Service Status</title>
-    <meta http-equiv="refresh" content="5">
+    <meta content="5" http-equiv="refresh">
     <meta charset="UTF-8">
     <style>
         body {
@@ -67,17 +67,17 @@
     </style>
 </head>
 <body>
-    <h1>Thread Status</h1>
-    <p>Last update: $$UPDATE_TIME$$</p>
-    <table>
-        <tr>
-            <th>Service (Thread)</th>
-            <th>Status</th>
-            <th>Queued Tasks</th>
-            <th>Last Activity</th>
-            <th>Recent Logs</th>
-        </tr>
-        $$TABLE_ROWS$$
-    </table>
+<h1>Thread Status</h1>
+<p>Last update: $$UPDATE_TIME$$</p>
+<table>
+    <tr>
+        <th>Service (Thread)</th>
+        <th>Status</th>
+        <th>Queued Tasks</th>
+        <th>Last Activity</th>
+        <th>Recent Logs</th>
+    </tr>
+    $$TABLE_ROWS$$
+</table>
 </body>
 </html>
