--- a/src/pubsub/workers/templates/status_page.html
+++ b/src/pubsub/workers/templates/status_page.html
@@ -4,67 +4,7 @@
     <title>Service Status</title>
     <meta content="5" http-equiv="refresh">
     <meta charset="UTF-8">
-    <style>
-        body {
-            font-family: monospace;
-            margin: 2em;
-            background-color: #2b2b2b;
-            color: #d4d4d4;
-        }
-
-        h1, p {
-            color: #d4d4d4;
-        }
-
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, .1);
-        }
-
-        th, td {
-            border: 1px solid #555;
-            padding: 12px;
-            text-align: left;
-            vertical-align: top;
-        }
-
-        th {
-            background-color: #0056b3;
-            color: #fff;
-        }
-
-        tr:nth-child(even) {
-            background-color: #3c3c3c;
-        }
-
-        .status-alive {
-            color: #4CAF50;
-            font-weight: 700;
-        }
-
-        .status-dead {
-            color: #dc3545;
-            font-weight: 700;
-        }
-
-        .logs ul {
-            margin: 0;
-            padding-left: 20px;
-        }
-
-        .logs li {
-            margin-bottom: 4px;
-        }
-
-        .logs {
-            font-size: 0.9em;
-            white-space: pre-wrap;
-            max-height: 200px;
-            overflow-y: auto;
-            display: block;
-        }
-    </style>
+    <style>$$CSS_CONTENT$$</style>
 </head>
 <body>
 <h1>Thread Status</h1>
